--- a/Quality/Quality/Areas/FinalInspection/Views/Query/_Tab1_Layout.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Query/_Tab1_Layout.cshtml
@@ -25,7 +25,7 @@
         </tr>
     }
 
-    @if (Model.FinalInspection.InspectionStage == "Final")
+    @if (Model.FinalInspection.InspectionStage == "Final" || Model.FinalInspection.InspectionStage == "Final Internal")
     {
         <tr>
             <td>
