--- a/Quality/Quality/Areas/FinalInspection/Views/Inspection/Measurement.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Inspection/Measurement.cshtml
@@ -90,7 +90,7 @@
             </tbody>
         </table>
         <div style="border:0px;padding:2vh;">
-            @if (Model.BrandID == "LLL" && Model.InspectionStage == "Final")
+            @if (Model.BrandID == "LLL" && (Model.InspectionStage == "Final" || Model.InspectionStage == "Final Internal"))
             {
                 <span style="font-size: 2vh; font-weight: 900; color: #999999 ">At least</span>
                 <span id="txtMeasurementRemainingAmount" style="font-size: 2vh; font-weight: 900; color: red ">@Model.MeasurementRemainingAmount</span>
