--- a/Quality/Quality/Areas/BulkFGT/Views/AgingHydrolysisTest/Detail.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/AgingHydrolysisTest/Detail.cshtml
@@ -451,10 +451,10 @@
                         </div>
 
                         <div class="MainDataAreaItem odd">
-                            @Html.TextBoxFor(o => o.MainDetailData.Approver, "", new { @class = "CanEdit", @style = "width: 5vw" })
-                            @Html.TextBoxFor(o => o.MainDetailData.ApproverName, "", new { @readonly = "readonly", @style = "width: 7vw" })
+                            @Html.TextBoxFor(o => o.MainDetailData.Approver, "", new { @class = "CanEdit", @style = "width: 35%" })
+                            @Html.TextBoxFor(o => o.MainDetailData.ApproverName, "", new { @readonly = "readonly", @style = "width: 55%" })
 
-                            <input id="btnDetailApproverSelectItem" type="button" class="OnlyEdit site-btn btn-blue" style="margin:0;border:0;" value="..." />
+                            <input id="btnDetailApproverSelectItem" type="button" class="OnlyEdit site-btn btn-blue" style="margin: 0; border: 0; width: 10%;" value="..." />
                         </div>
 
 
